using chai and expect for my testing

--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,8 +1,9 @@
 {
   "scripts": {
-    "test": "mocha"
+    "test": "chai"
   },
   "dependencies": {
+    "chai": "^5.1.2",
     "mocha": "^10.8.2"
   }
 }
